--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
     "react-typewriter-hook": "^1.0.2",
     "web-vitals": "^2.1.4"
