--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "react-typewriter-hook": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
